finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<p> Brandon Storm </p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>This is my first webpage</title>
+    </head>
+    <body>
+        <h2>Places I have Worked</h3>
+            <main>
+                <article>
+                    <p>On this webpage, I will list all of my jobs that I have ever had. I will start with my first job and work my way to the present.</p>
+                </article>
+                <ol>
+                    <li>RMC Cinemas</li>
+                        <p>This was my first job ever. All the popcorn and soda you could ask for. The free movies were great too!</p>
+                        <img src="images/stadium_cinemas.png">
+                    <li>Napa Auto Parts</li>
+                        <p>I'm not sure why I had this job. I don't really know anything about cars. It helped to pay the bills.</p>
+                        <img src="images/napa.png">
+                    <li>SIUE Dining Services</li>
+                        <p>Lifting heavy food items every morning. Stocking the soda containers. This was a good college job.</p>
+                        <img src="images/siue.jpg">
+                    <li>Ashley Furniture</li>
+                        <p>This was my last college job. I helped to move around furniture and setup the displays.</p>
+                        <img src="images/ashley_furniture.png">
+                    <li>Patterson Technology Center</li>
+                        <p>My first "real" job. I helped with hardware support for dental offices, and also implementation of services.</p>
+                        <img src="images/patterson.png">
+                    <li>Square</li>
+                        <p>This is my current job. I do customer support for the Square credit card service.</p>
+                        <img src="images/square.png">
+                </ol>
+            </main>
+        <footer>&copy; Brandon Storm Web Designs</footer>
+    </body>
+</html>
