Added p.cursive class

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
                     </article>
                 <ol>
                     <li>RMC Cinemas</li>
-                        <p>This was my first job ever. All the popcorn and soda you could ask for. The free movies were great too!</p>
+                        <p class = "cursive">This was my first job ever. All the popcorn and soda you could ask for. The free movies were great too!</p>
                         <a href="http://www.rmccinemas.com/">
                             <img src="images/stadium_cinemas.png">
                         </a>
                     <li>Napa Auto Parts</li>
-                        <p>I'm not sure why I had this job. I don't really know anything about cars. It helped to pay the bills.</p>
+                        <p class = "cursive">I'm not sure why I had this job. I don't really know anything about cars. It helped to pay the bills.</p>
                         <a href="https://www.napaonline.com/" >
                             <img src="images/napa.png">
                         </a>
                     <li>SIUE Dining Services</li>
-                        <p>Lifting heavy food items every morning. Stocking the soda containers. This was a good college job.</p>
+                        <p class = "cursive">Lifting heavy food items every morning. Stocking the soda containers. This was a good college job.</p>
                         <a href = "http://www.siue.edu/">
                             <img src="images/siue.jpg">
                         </a>
